--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
 env:
   global:
     - TRAVIS_DEBIAN_GIT_BUILDPACKAGE_OPTIONS="--git-upstream-tag=v%\(version\)s-branch"
-    - TRAVIS_DEBIAN_DISTRIBUTION=sid 
+    - TRAVIS_DEBIAN_SUITE=sid 
   matrix:
     - TRAVIS_DEBIAN_TARGET_ARCH=amd64
     - TRAVIS_DEBIAN_TARGET_ARCH=armhf
